Correct spacing.

--- a/interfaces/themes/friendup13/theme.css
+++ b/interfaces/themes/friendup13/theme.css
@@ -86,8 +86,8 @@ html body #DoorsScreen .Left > .VirtualWorkspaces
 {
 	border-left: 1px solid rgba(0,0,0,0.05);
 	border-right: 1px solid rgba(0,0,0,0.05);
-	padding-left: 0;
-	padding-right: 0;
+	padding-left: 3px;
+    padding-right: 3px;
 }
 
 html #DoorsScreen .Left > .VirtualWorkspaces > div
@@ -1454,9 +1454,15 @@ html .Screen > .TitleBar > .Left .Extra:hover .Time
 	color: white;
 }
 
+html .Screen > .TitleBar > .Left .Time 
+{
+    padding: 0 0 0 8px;
+    border-left: 1px solid rgba(0,0,0,0.05);
+}
+
 html .Screen > .TitleBar > .Left > .Extra > span 
 {
-    margin: 0 5px 0 0;
+    margin: 0 8px 0 0;
 }
 
 html .Screen > .TitleBar > .Left > .Extra > div:last-child
